# github-projects-planner-sync

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  sync-config.example.yaml  sync-config.yaml
src/: github_api.rs  lib.rs  main.rs  response.rs  webhook.rs
src/graphql/: query.graphql
src/lambda/: main.rs
